# lampster-ha-integration

./: .gitignore  CLAUDE.md  INTEGRATION_README.md  LICENSE  README.md  hacs.json  info.md  lampster_cli.py  pyproject.toml
custom_components/lampster/: __init__.py  config_flow.py  const.py  coordinator.py  light.py  manifest.json
custom_components/lampster/lampster/: client.py  constants.py
custom_components/lampster/translations/: en.json
lampster/: __init__.py  client.py  constants.py  exceptions.py  models.py
tests/: __init__.py  test_all_modes.py  test_device_info.py  test_discovery.py  test_fix_response.py  test_power.py  test_results_20260215_125952.txt  test_rgb.py  test_white.py  test_white_mode_fixed.py  white_mode_results_20260215_132050.txt
