[project]
name = "lampster-ha-integration"
version = "0.1.1"
description = "Home Assistant integration for The Lampster RGB Bluetooth lamp"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lampster"]
